# job_aggregator

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/: .jvmopts  .scalafmt.conf  build.sbt
backend/.direnv/: flake-profile-1-link
backend/endpoints/: build.sbt
backend/project/: Dependencies.scala  DockerImagePlugin.scala  ProjectDefaults.scala
backend/supports/: build.sbt
backend/supports/jobs/: build.sbt
backend/supports/kafka/: build.sbt
backend/supports/mailer/: build.sbt
backend/supports/minio/: build.sbt
backend/supports/sttp/: build.sbt
docs/: README.md  architecture.md  operations.md  status.md  todo.md
infra/: README.md  docker-compose.ingestion.yml  docker-compose.kafka.yml  docker-compose.postgres.yml
job_aggregator/: __main__.py  app.py  config.py
job_aggregator/core/: __init__.py  parser_base.py  plugin_loader.py  raw_message_parser.py
job_aggregator/kafka/: __init__.py  producer.py
job_aggregator/models/: __init__.py  job.py
job_aggregator/parsers/: toshkent_common.py
job_aggregator/parsers/ishbor_toshkent_kerak_ishchi_bor/: config.yaml  parser.py
job_aggregator/telegram_client/: __init__.py  client.py
scripts/: analyze_channel_history.py  consume_kafka_messages.py  create_telegram_session.py  export_channel_history.py  replay_export_to_kafka.py
tests/: test_ishbor_toshkent_kerak_ishchi_bor_parser.py  test_ishchi_bor_kerak_toshkent_parser.py  test_plugin_loader.py  test_xorazm_ish_bor_elonlar_parser.py  test_xorazm_parser.py
(+104 files in other folders)
